# victoria3-analysis

./: .gitattribute  .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
docs/: api.md
docs/usage/: analysis.md  index.md  parse.md
examples/: buildings.py  state_regions.py
license/: index.html
scripts/: buy_packages.py  goods.py  production_analysis.py  production_method.py  technology.py
search/: search_index.json
src/vic3_analysis/: __init__.py  utils.py
src/vic3_analysis/analysis/: production.py
src/vic3_analysis/parse/: buildings.py  buy_packages.py  goods.py  production_method_groups.py  production_methods.py  state_regions.py  technology.py
tables/: buildings.csv  buy_packages.csv  goods.csv  production_analysis.csv  production_methods.csv  production_table.csv  state_regions.csv  technology.csv
tests/: cangshulun_1.py  cangshulun_2.py  test_buildings.py  test_buy_packages.py  test_goods.py  test_production_analysis.py  test_production_method.py  test_production_method_groups.py  test_state_regions.py  test_technology.py
usage/analysis/: index.html
usage/parse/: index.html
